# fast-order-book-suite

./: CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/: event_generator.hpp  iorder_book.hpp  order_book_variants.hpp  types.hpp
engine/scripts/: run_trials.sh
engine/src/: event_generator.cpp  order_book_hash.cpp  order_book_map.cpp
engine_grpc/: CMakeLists.txt  order.proto
engine_grpc/src/: service_impl.cpp  service_impl.hpp  service_main.cpp
gateway/: gateway_server.py  order.proto  order_pb2.py  order_pb2_grpc.py  test_client.py
